[tool.poetry]
name = "budget-service"
version = "0.1.0"
description = ""
authors = ["chestnut90 <cowzon90@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "budget_service"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
drf-yasg = "^1.21.7"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.9"
djangorestframework-simplejwt = "^5.3.0"
django-environ = "^0.11.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
isort = "^5.12.0"
black = "^23.11.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
